// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtuosoMockContext List correctly renders items 1`] = `
<div>
  <div
    data-test-id="virtuoso-scroller"
    data-virtuoso-scroller="true"
    style="height: 100%; outline: none; overflow-y: auto; position: relative;"
    tabindex="0"
  >
    <div
      data-viewport-type="element"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <div
        data-test-id="virtuoso-item-list"
        style="box-sizing: border-box; padding-top: 0px; padding-bottom: 100px; margin-top: 0px;"
      >
        <div
          data-index="0"
          data-item-index="0"
          data-known-size="100"
        >
          Item 0
        </div>
        <div
          data-index="1"
          data-item-index="1"
          data-known-size="100"
        >
          Item 1
        </div>
        <div
          data-index="2"
          data-item-index="2"
          data-known-size="100"
        >
          Item 2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext List correctly renders items with useWindowScroll 1`] = `
<div>
  <div
    data-virtuoso-scroller="true"
    style="position: relative; height: 400px;"
  >
    <div
      data-viewport-type="window"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <div
        data-test-id="virtuoso-item-list"
        style="box-sizing: border-box; padding-top: 0px; padding-bottom: 100px; margin-top: 0px;"
      >
        <div
          data-index="0"
          data-item-index="0"
          data-known-size="100"
        >
          Item 0
        </div>
        <div
          data-index="1"
          data-item-index="1"
          data-known-size="100"
        >
          Item 1
        </div>
        <div
          data-index="2"
          data-item-index="2"
          data-known-size="100"
        >
          Item 2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext Table correctly renders items 1`] = `
<div>
  <div
    data-test-id="virtuoso-scroller"
    data-virtuoso-scroller="true"
    style="height: 100%; outline: none; overflow-y: auto; position: relative;"
    tabindex="0"
  >
    <div
      data-viewport-type="element"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <table
        style="border-spacing: 0;"
      >
        <tbody
          data-test-id="virtuoso-item-list"
        >
          <tr
            data-index="0"
            data-item-index="0"
            data-known-size="100"
          >
            <td>
              Item $
              0
            </td>
          </tr>
          <tr
            data-index="1"
            data-item-index="1"
            data-known-size="100"
          >
            <td>
              Item $
              1
            </td>
          </tr>
          <tr
            data-index="2"
            data-item-index="2"
            data-known-size="100"
          >
            <td>
              Item $
              2
            </td>
          </tr>
          <tr>
            <td
              style="height: 100px; padding: 0px; border: 0px;"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`VirtuosoMockContext Table correctly renders items with useWindowScroll 1`] = `
<div>
  <div
    data-virtuoso-scroller="true"
    style="position: relative; height: 400px;"
  >
    <div
      data-viewport-type="window"
      style="width: 100%; height: 100%; position: absolute; top: 0px;"
    >
      <table
        style="border-spacing: 0;"
      >
        <tbody
          data-test-id="virtuoso-item-list"
        >
          <tr
            data-index="0"
            data-item-index="0"
            data-known-size="100"
          >
            <td>
              Item $
              0
            </td>
          </tr>
          <tr
            data-index="1"
            data-item-index="1"
            data-known-size="100"
          >
            <td>
              Item $
              1
            </td>
          </tr>
          <tr
            data-index="2"
            data-item-index="2"
            data-known-size="100"
          >
            <td>
              Item $
              2
            </td>
          </tr>
          <tr>
            <td
              style="height: 100px; padding: 0px; border: 0px;"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
